--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header {
   height: 68px;
   padding: 18px 2.5%;
 /*   background-color: #FCF7F3; */
-	background-color:orange;
+	background-color:#FFA500;
 }
 
 header ul {
