--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ hr {
 }
 
 .work h1 {
-  margin-bottom: 14px;
+  margin-bottom: 4px;
   font-family: 'Playfair Display', serif;
   font-style: normal;
   font-weight: bold;
@@ -165,12 +165,14 @@ hr {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-left: 55px;
+  padding-right: 55px;
 }
 
 .projects img {
-  padding-top: 34px;
-width: 90%;
-	height: auto;
+  padding-top: 54px;
+  width: 47%;
+  height: auto;
 }
 
 
