--- a/casestudy/css/style.css
+++ b/casestudy/css/style.css
@@ -10,6 +10,8 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
   width: 95%;
   height: 68px;
   padding: 18px 2.5%;
