--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,20 @@ header {
   z-index: 1;
 }
 
+#menuToggle span {
+  display: none;
+}
+
+nav input{
+  display: none;
+}
+
+.mobileresumebutton{
+  display:none;
+}
+
 header ul {
   display: inline-block;
-  color: white;
   margin-top: 33px;
   padding-left: 0px;
   font-family: 'Nunito', sans-serif;
@@ -103,6 +114,7 @@ hr {
   border-bottom: 1px solid #AB8602;
 }
 
+
 /* My UX Skills Section */
 .skills{
   padding-left: 147px;
@@ -169,11 +181,11 @@ hr {
 
 .projects {
   display: grid;
-  justify-content: space-between;
+  justify-content: center;
   padding-left: 0px;
   grid-template-areas: 
   "COH Tribi"
-  "DHS DHS"
+  "DHS ."
   ;
   grid-gap: 10px;
 }
@@ -233,12 +245,15 @@ hr {
   line-height: 35px;
 }
 
-.about img {
+.redpicdesktop {
   float: right;
   padding-left: 116px;
   padding-top: 61px;
 }
 
+.redpicmobile{
+  display: none;
+}
 
 /* Contact */
 .contact {
@@ -331,4 +346,282 @@ footer li {
 
 footer li:first-of-type {
   border-left: none;
+}
+
+@media screen and (max-width: 450px) {
+
+/* Header */
+
+  header {
+    position: fixed;
+    width: 100%;
+    height: 40px;
+    padding: 5% 0;
+    top: 0;
+  }
+
+  header img {
+    width: 15%;
+    top: 3vh;
+    left: 43%;
+    z-index: 1;
+    padding-bottom: 5%;
+  }
+ 
+  header ul {
+    position: absolute;
+    width: 450px;
+    margin: -100px 0 0 -50px;
+    padding: 125px 50px 25px 50px;
+    background: #ededed;
+    list-style-type: none;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    font-size: 22px;
+  }
+  
+  header li {
+    padding: 10px 0;
+    display: block;
+  }
+  
+  header li a {
+    transition: color 0.3s ease;
+  }
+
+  .desktopresumebutton {
+    display: none;
+  }
+
+  .mobileresumebutton {
+    display:block;
+  }
+
+  nav {
+    display: block;
+    position: relative;
+    top: 3vh;
+    left: 3vh;
+    z-index: 1;
+  }
+  
+  /* trigger */
+  nav input {
+    display: block;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0; 
+    z-index: 2; 
+  }
+
+  /* Just a quick hamburger + animation */
+  #menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #AB390A;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+  
+  #menuToggle span:first-child {
+    transform-origin: 0% 0%;
+  }
+  #menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+  #menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background:#AB390A;
+  }
+  #menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  #menuToggle input:checked ~ span:nth-last-child(2){
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  #menuToggle input:checked ~ ul
+  {
+    transform: none;
+  }  
+
+/* Hero Image */
+  .heroImg {
+    padding: 0;
+    margin: 5%;
+  }
+
+  .heroImg img {
+    display: block;
+    float: none;
+    padding: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    height: auto;
+    margin-top: 70px;
+  }
+
+  .heroImg h1 {
+    margin-top: 0px;
+    font-size: 38px;
+    line-height: 48px;
+  }
+
+  .heroImg p {
+    font-size: 18px;
+    line-height: 28px;
+    margin-top: 15px;
+  }
+
+  hr {
+    padding-top: 30px;
+  }
+
+/* My UX Skills Section */
+  .skills{
+    padding-left: 5%;
+    padding-right: 5%
+  }
+
+  .skills h1{
+    font-size: 38px;
+    line-height: 48px;
+  }
+
+  .flexContainer {
+    flex-direction: column;
+    padding-top: 30px;
+  }
+
+  .skillsCard{
+    width: 100%;
+    margin-top: 7%;
+    padding: 5%;
+  }
+
+  .skillsCard:first-child {
+    margin-top: 0;
+  }
+
+  .skillsCard p {
+    margin-top: 0px;
+    font-family: 'Nunito', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+  }
+/* My Work Section */
+  .work {
+    padding-left: 5%;
+    padding-right: 5%
+  }
+
+  .work h1 {
+    font-size: 38px;
+    line-height: 48px;
+    margin-bottom: 30px;
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .caption .hoverproject {
+    display: block; 
+  }
+
+  .work img {
+    width: 100%;
+    height: auto;
+    margin-top: 4%;
+  }
+
+  .work img:first-of-type {
+    margin-top: 0%;
+  }
+
+/* About Me */
+  .about {
+    display:inline-block;
+    padding-left: 5%;
+    padding-right: 5%
+  }
+
+  .about h1 {
+    font-size: 38px;
+    line-height: 48px;
+    margin-bottom: 30px;
+  }
+  .about p {
+    font-size: 16px;
+    line-height: 23px;
+    margin-top: 30px;
+  }
+  
+  .redpicdesktop{
+    display: none;
+  }
+
+  .redpicmobile {
+    margin-top: 0px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    height: auto;
+  }
+
+/* Contact */
+  .contact {
+    padding-left: 5%;
+    padding-right: 5%
+  }
+
+  .contact h1 {
+    font-size: 38px;
+    line-height: 48px;
+    margin-bottom: 30px;
+  }
+
+  input {
+    width: 90%;
+  }
+
+  textarea {
+    width: 100%;
+  }
+  
+/* Footer */
+  footer {
+    padding: 5px;
+  }
+
+  footer ul {
+    flex-direction: column;
+  }
+
+  footer li {
+    display: block;
+    border-left: none;
+    padding: 0px;
+    text-align: center;
+  }
+
 }
