--- a/casestudy/css/style.css
+++ b/casestudy/css/style.css
@@ -19,6 +19,18 @@ header {
   z-index: 1;
 }
 
+#menuToggle span {
+  display: none;
+}
+
+nav input{
+  display: none;
+}
+
+.mobileresumebutton{
+  display:none;
+}
+
 header ul {
   display: inline-block;
   color: white;
@@ -63,94 +75,256 @@ header button {
 }
 
 .content {
-    margin-left: 8%;
-    margin-right: 8%;
+  margin-left: 8%;
+  margin-right: 8%;
 }
+
 h1 {
-    margin-top: 68px;
-    margin-bottom: 0;
-    font-family: 'Playfair Display', serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 46px;
-    line-height: 64px;
-    color: black;
-    margin-bottom: 0;
+  margin-top: 68px;
+  margin-bottom: 0;
+  font-family: 'Playfair Display', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 46px;
+  line-height: 64px;
+  color: black;
+}
+
+.opening {
+  margin-top: 160px;
+}
+
+.closing{
+  text-align: center; 
+  color: #AB8602; 
+  margin-top: 85px; 
+  margin-bottom: 85px;
 }
 
 hr {
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid #AB8602;
-  }
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #AB8602;
+}
 
 h2 {
-font-family: 'Playfair Display', serif;
-font-style: normal;
-font-weight: bold;
-font-size: 36px;
-line-height: 48px;
-color: #AB390A;
-margin-top: 35px;
-margin-bottom: 0;
+  font-family: 'Playfair Display', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 48px;
+  color: #AB390A;
+  margin-top: 35px;
+  margin-bottom: 0;
 }
 
 h3 {
-font-family: 'Playfair Display', serif;
-font-style: normal;
-font-weight: bold;
-font-size: 28px;
-line-height: 35px;
-color: #000000;
-margin-bottom: 0;
-margin-top: 30px;
+  font-family: 'Playfair Display', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 35px;
+  color: #000000;
+  margin-bottom: 0;
+  margin-top: 30px;
 }
 
 p {
-font-family: 'Nunito', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 27px;
-color: #000000;
-margin-top: 15px;
-margin-bottom: 0;
+  font-family: 'Nunito', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 27px;
+  color: #000000;
+  margin-top: 15px;
+  margin-bottom: 0;
 }
 
 .highlight {
-    font-family: 'Nunito', sans-serif;
-    font-style: normal;
-    font-weight:700;
-    font-size: 18px;
-    line-height: 27px;
-    color: #AB390A;
-    }
+  font-family: 'Nunito', sans-serif;
+  font-style: normal;
+  font-weight:700;
+  font-size: 18px;
+  line-height: 27px;
+  color: #AB390A;
+}
 
 /* Footer */
 footer {
-    padding: 8px;
-    font-family: 'Nunito', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18x;
-    line-height: 25px;  
-    letter-spacing: 0.05em;
-    color: black;
-    background-color: #AB860226;
+  padding: 8px;
+  font-family: 'Nunito', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18x;
+  line-height: 25px;  
+  letter-spacing: 0.05em;
+  color: black;
+  background-color: #AB860226;
+}
+  
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+  
+footer li {
+  display: inline-block;
+  padding: 0px 15px;
+  border-left: 1px solid black;
+}
+
+footer li:first-of-type {
+  border-left: none;
+}
+
+
+@media screen and (max-width: 450px) {
+
+  /* Header */
+    
+  header {
+    position: fixed;
+    width: 100%;
+    height: 40px;
+    padding: 5% 0;
+    top: 0;
   }
   
+  header img {
+    width: 15%;
+    top: 3vh;
+    left: 43%;
+    z-index: 1;
+    padding-bottom: 5%;
+  }
+    
+  header ul {
+    position: absolute;
+    width: 450px;
+    margin: -100px 0 0 -50px;
+    padding: 125px 50px 25px 50px;
+    background: #ededed;
+    list-style-type: none;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    font-size: 22px;
+  }
+    
+  header li {
+    padding: 10px 0;
+    display: block;
+  }
+  
+  header li a {
+    transition: color 0.3s ease;
+  }
+  
+  .desktopresumebutton {
+    display: none;
+  }
+
+  .mobileresumebutton {
+    display:block;
+  }
+
+  nav {
+    display: block;
+    position: relative;
+    top: 3vh;
+    left: 3vh;
+    z-index: 1;
+  }
+    
+  /* trigger */
+  nav input {
+    display: block;
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0; 
+    z-index: 2; 
+  }
+  
+  /* Just a quick hamburger + animation */
+  #menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #AB390A;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                  0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+  
+  #menuToggle span:first-child {
+    transform-origin: 0% 0%;
+  }
+  #menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+  #menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background:#AB390A;
+  }
+  #menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  #menuToggle input:checked ~ span:nth-last-child(2){
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  #menuToggle input:checked ~ ul
+  {
+    transform: none;
+  }  
+
+  .content {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .opening {
+    margin-top: 110px;
+    font-size: 40px;
+    line-height: 50px;
+  }
+
+  h2 {
+    margin-top: 30px;
+  }
+
+  h3 {
+    margin-top: 25px;
+  }
+
+  .closing {
+    font-size: 40px;
+    line-height: 50px;
+  }
+
+  footer {
+    padding: 5px;
+  }
+
   footer ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
+    flex-direction: column;
   }
-  
+
   footer li {
-    display: inline-block;
-    padding: 0px 15px;
-    border-left: 1px solid black;
-  }
-  
-  footer li:first-of-type {
+    display: block;
     border-left: none;
+    padding: 0px;
+    text-align: center;
   }
+}
