--- a/casestudy/css/style.css
+++ b/casestudy/css/style.css
@@ -74,6 +74,10 @@ header button {
   outline: #AB390A solid 1px;
 }
 
+header button:hover {
+  background: #BF5602;
+}
+
 .content {
   margin-left: 8%;
   margin-right: 8%;
