--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header {
   padding: 18px 2.5%;
   background-color: #FCF7F3;
   z-index: 1;
+  align-items: center;
 }
 
 #menuToggle span {
@@ -26,13 +27,15 @@ nav input{
   display: none;
 }
 
+
+
 .mobileresumebutton{
-  display:none;
+  display: none;
 }
 
 header ul {
-  display: inline-block;
-  margin-top: 33px;
+  display: flex;
+  /* margin-top: 33px; */
   padding-left: 0px;
   font-family: 'Nunito', sans-serif;
   font-style: normal;
@@ -40,12 +43,14 @@ header ul {
   font-size: 18px;
   letter-spacing: 0.05em;
   color: #AB390A;
+  
 }
 
 header li {
   display: inline-block;
-  padding-right: 35px;
+  padding-right: 5%;
 }
+
 
 header li a {
   text-decoration: inherit;
@@ -53,13 +58,14 @@ header li a {
 }
 
 header img {
-  position: absolute;
-  left: 47.5%;
+  /* position: absolute;
+  left: 47.5%; */
+  /* width: 85%; */
 }
 
 header button {
   height: 40px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   padding: 5px 20px;
   font-family: 'Nunito', sans-serif;
   font-size: 18px;
@@ -79,27 +85,30 @@ header button:hover, .contact button:hover{
 
 /* Hero Image */
 .heroImg {
-  padding-top: 61px;
+  padding-top: 148px;
   padding-left: 147px;
   padding-right: 147px;
+  display: flex;
+  align-items: center;
 }
 
 .heroImg img {
-  float: right;
-  margin-top: 84px;
+  /* float: right; */
+  /* margin-top: 30px; */
   margin-bottom: 0px;
   padding-bottom: 0px;
-  padding-left: 118px;
+  padding-left: 20%;
 }
 
 .heroImg h1 {
-  margin-top: 145px;
+  /* margin-top: 145px; */
   margin-bottom: 0px;
   font-family: 'Playfair Display', serif;
   font-style: normal;
   font-weight: bold;
   font-size: 48px;
   line-height: 62px;
+  display: inline;
 }
 
 .heroImg p {
@@ -107,8 +116,9 @@ header button:hover, .contact button:hover{
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 22px;
-  line-height: 35px;
+  font-size: 18px;
+  line-height: 33px;
+  display: inline;
 }
 
 hr {
@@ -165,8 +175,8 @@ hr {
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
-  line-height: 27px;
+  font-size: 18px;
+  line-height: 26px;
 }
 
 
@@ -253,8 +263,8 @@ hr {
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 22px;
-  line-height: 35px;
+  font-size: 18px;
+  line-height: 33px;
 }
 
 .redpicdesktop {
@@ -382,6 +392,7 @@ footer li:first-of-type {
  
   header ul {
     position: absolute;
+    flex-direction: column;
     width: 450px;
     margin: -100px 0 0 -50px;
     padding: 125px 50px 25px 50px;
@@ -419,7 +430,8 @@ footer li:first-of-type {
   }
   
   /* trigger */
-  nav input {
+  
+   input {
     display: block;
     width: 32px;
     height: 32px;
@@ -484,7 +496,8 @@ footer li:first-of-type {
     margin-right: auto;
     width: 60%;
     height: auto;
-    margin-top: 70px;
+    margin-top: 0;
+
   }
 
   .heroImg h1 {
