--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ header {
   padding: 18px 2.5%;
   background-color: #FCF7F3;
   z-index: 1;
-  align-items: center;
 }
 
 #menuToggle span {
@@ -27,15 +26,13 @@ nav input{
   display: none;
 }
 
-
-
 .mobileresumebutton{
-  display: none;
+  display:none;
 }
 
 header ul {
-  display: flex;
-  /* margin-top: 33px; */
+  display: inline-block;
+  margin-top: 33px;
   padding-left: 0px;
   font-family: 'Nunito', sans-serif;
   font-style: normal;
@@ -43,14 +40,12 @@ header ul {
   font-size: 18px;
   letter-spacing: 0.05em;
   color: #AB390A;
-  
 }
 
 header li {
   display: inline-block;
-  padding-right: 5%;
+  padding-right: 35px;
 }
-
 
 header li a {
   text-decoration: inherit;
@@ -58,14 +53,13 @@ header li a {
 }
 
 header img {
-  /* position: absolute;
-  left: 47.5%; */
-  /* width: 85%; */
+  position: absolute;
+  left: 47.5%;
 }
 
 header button {
   height: 40px;
-  /* margin-top: 20px; */
+  margin-top: 20px;
   padding: 5px 20px;
   font-family: 'Nunito', sans-serif;
   font-size: 18px;
@@ -85,30 +79,27 @@ header button:hover, .contact button:hover{
 
 /* Hero Image */
 .heroImg {
-  padding-top: 148px;
+  padding-top: 61px;
   padding-left: 147px;
   padding-right: 147px;
-  display: flex;
-  align-items: center;
 }
 
 .heroImg img {
-  /* float: right; */
-  /* margin-top: 30px; */
+  float: right;
+  margin-top: 84px;
   margin-bottom: 0px;
   padding-bottom: 0px;
-  padding-left: 20%;
+  padding-left: 118px;
 }
 
 .heroImg h1 {
-  /* margin-top: 145px; */
+  margin-top: 145px;
   margin-bottom: 0px;
   font-family: 'Playfair Display', serif;
   font-style: normal;
   font-weight: bold;
   font-size: 48px;
   line-height: 62px;
-  display: inline;
 }
 
 .heroImg p {
@@ -116,9 +107,8 @@ header button:hover, .contact button:hover{
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 33px;
-  display: inline;
+  font-size: 22px;
+  line-height: 35px;
 }
 
 hr {
@@ -175,8 +165,8 @@ hr {
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 26px;
+  font-size: 20px;
+  line-height: 27px;
 }
 
 
@@ -263,8 +253,8 @@ hr {
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 33px;
+  font-size: 22px;
+  line-height: 35px;
 }
 
 .redpicdesktop {
@@ -392,7 +382,6 @@ footer li:first-of-type {
  
   header ul {
     position: absolute;
-    flex-direction: column;
     width: 450px;
     margin: -100px 0 0 -50px;
     padding: 125px 50px 25px 50px;
@@ -430,8 +419,7 @@ footer li:first-of-type {
   }
   
   /* trigger */
-  
-   input {
+  nav input {
     display: block;
     width: 32px;
     height: 32px;
@@ -496,8 +484,7 @@ footer li:first-of-type {
     margin-right: auto;
     width: 60%;
     height: auto;
-    margin-top: 0;
-
+    margin-top: 70px;
   }
 
   .heroImg h1 {
