--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ header {
   display: flex;
   justify-content: space-between;
   position: fixed;
+  top: 0;
   width: 95%;
   height: 68px;
   padding: 18px 2.5%;
@@ -32,6 +33,7 @@ nav input{
 
 header ul {
   display: inline-block;
+  color: white;
   margin-top: 33px;
   padding-left: 0px;
   font-family: 'Nunito', sans-serif;
@@ -72,7 +74,7 @@ header button {
   outline: #AB390A solid 1px;
 }
 
-header button:hover, .contact button:hover{
+header button:hover {
   background: #BF5602;
 }
 
